# cijoe-pkg-qemu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.rst  setup.cfg  setup.py
.github/workflows/: selftest.yml
envs/: qemu-localhost.sh  refenv-qemu.sh
modules/: qemu.sh
src/cijoe/qemu/: __init__.py  wrapper.py
src/cijoe/qemu/configs/: debian-bookworm-amd64-kvm.toml  debian-bookworm-arm64-hvf.toml  debian-bullseye-amd64-kvm.toml  debian-bullseye-x86_64-kvm.toml  default-config.toml  default.config  freebsd-13-amd64-kvm.toml
src/cijoe/qemu/scripts/: build_x86.py  guest_bootimg.py  guest_cloudinit.py  guest_init_using_cloudinit_image.py  guest_init_using_image.py  guest_start.py  guest_start_nvme.py
src/cijoe/qemu/workflows/: example-workflow.yaml  example.workflow
src/cijoe/qemu/worklets/: build_x86.py  guest_bootimg.py  guest_cloudinit.py  guest_kill.py  guest_start.py  guest_start_nvme.py  install.py
testcases/: qemu-commands.sh
testfiles/cloudinit/debian-bullseye/: meta-data  user-data
testplans/: qemu.plan
testsuites/: qemu.suite
