[bdist_wheel]
universal = 1

[metadata]
name = cijoe-pkg-qemu
version = attr: cijoe.qemu.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = A loosely coupled approach to systems development and testing
license = BSD-3-Clause

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Topic :: Software Development :: Testing
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

[options]
requires_python = >=3.9
setup_requires =
  wheel
install_requires =
  cijoe>=0.9.18
  psutil

zip_safe = False
packages = find_namespace:
package_dir =
  = src

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.config, *.perfreq, *.toml, *.yaml, *.workflow, *.config, *.user, *.meta
